<resources>
    <string name="app_name">Lab1</string>
    <string name="first_number">First number</string>
    <string name="second_number">Second number</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="result">Result</string>
    <string name="clear">clear</string>
</resources>
