<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:orientation="vertical"
                  android:gravity="top"
                  android:id="@+id/linearLayout" app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
                  app:layout_constraintVertical_bias="1.0">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:background="?attr/colorPrimary"
                android:layout_gravity="center"
                android:weightSum="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="vertical"

        >
            <EditText
                    android:id="@+id/first_number"
                    android:hint="@string/first_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
            />
            <EditText
                    android:id="@+id/second_number"
                    android:hint="@string/second_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:gravity="center_horizontal"
            />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarStyle"

        >
            <Button
                    android:id="@+id/addButton"
                    android:text="@string/add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_weight="1"/>
            <Button
                    android:id="@+id/subButton"
                    android:text="@string/sub"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_weight="1"/>
            <Button
                    android:id="@+id/mulButton"
                    android:text="@string/multiplication"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_weight="1"/>
            <Button
                    android:id="@+id/divButton"
                    android:text="@string/division"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >
            <TextView
                    android:id="@+id/result"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height='match_parent'
                    android:gravity="center"
                    android:text="@string/result"
            />
            <Button
                    android:id="@+id/clear"
                    android:text="@string/clear"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    app:layout_constraintLeft_toRightOf='@+id/result'
            />

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>